Update api server routes and refactor bigram app component
